Fixed bkg chart jumping around issue - reduced padding when hover. Ta, Pu

--- a/app/assets/stylesheets/booking_chart.css.scss
+++ b/app/assets/stylesheets/booking_chart.css.scss
@@ -24,6 +24,7 @@
 		}
 
     td:hover {
+			padding: 1px 3px;
 		  border: 2px solid black;
       cursor: pointer;
     }
